--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/prj1
-spring.datasource.username=root
-spring.datasource.password=1234
 
 #file size for one file
 spring.servlet.multipart.max-file-size=1MB
@@ -10,5 +7,5 @@ spring.servlet.multipart.max-request-size=10MB
 #bucketName
 spring.config.import=custom.properties
 
-#static
-spring.web.resources.static-locations=classpath:/static,classpaht:/frontend
+# static folder for react frontend
+spring.web.resources.static-locations=classpath:/static,classpath:/frontend
