--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 
+#database connection pool max size
+spring.datasource.hikari.maximum-pool-size=2
+
 #file size for one file
 spring.servlet.multipart.max-file-size=1MB
 #file size for all files
